# be18-fin-5team-order101

./: .gitignore  README.md  pom.xml
backend/: .gitignore  HELP.md  pom.xml
frontend/: .gitignore  README.md  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/assets/: main.css
frontend/src/components/: Header.vue  OrderItemModal.vue  Sidebar.vue
frontend/src/components/api/purchase/: purchaseService.js
frontend/src/components/global/: Date.js  Money.vue
frontend/src/components/modal/: OrderItemModal.vue  SupplierSearchModal.vue
frontend/src/plugins/: formatWon.js
frontend/src/router/: index.js
frontend/src/stores/: auth.js
frontend/src/views/: DashboardView.vue  LoginView.vue  MyView.vue  PagePlaceholder.vue
frontend/src/views/hq/inventory/: StockView.vue  (+1 more)
python-server/: .gitignore  README.md  pyproject.toml
python-server/app/: main.py
python-server/app/data_pipeline/: 00_fix_sku_catalog_once.py  01_preprocess_domain_mapping.py  01b_drop_misc_categories.py  02_expand_sku_from_category.py  03_make_hq_weekly.py  04_split_hq_into_virtual_stores.py  05_make_features.py  06_export_to_demand_forecast.py  10_ingest_external.py  clean_sku_catalog_optionA.py  download_kaggle_data.ipynb  sample_domain_sales.csv  sample_domain_sales_sku.csv  sku_catalog.csv  weather_data_fetch.py
python-server/app/modeling/: 07_train_eval.py  08_predict_future.py
python-server/app/ops/: make_product_master_from_sku.py
python-server/app/service/: forecast_service.py
python-server/notebooks/: demand_forecast_train.ipynb
(+247 files in other folders)
